...
    const theme = this.context;
    const title = i18n.t('notifications');

    if (this.state.renderPlaceholderOnly) {
      return (
        <SafeAreaView
          testID="seninme-notifications-screen"
          style={{ flex: 1, backgroundColor: theme.background }}
        >
          <Components.NavigationBar title={title} />
          <View style={{ height: 50, marginTop: 0, paddingTop: 0 }}>
            {this._renderListHeader()}
          </View>
...
  }

  _renderEmptyNotifications() {
    if (APP_CONFIG.singleSite && this.state.connectedSites === 0) {
      return (
        <Components.EmptyNotificationsView
          testID="seninme-notifications-connect"
          text={i18n.t('settings_connect_description')}
          actionLabel={i18n.t('settings_connect_action')}
          onAction={() => this.props.navigation.navigate('Home')}
        />
      );
    }
...
